--- a/ZulipApp/build.gradle
+++ b/ZulipApp/build.gradle
@@ -13,6 +13,35 @@ buildscript {
     }
 }
 
+allprojects {
+    repositories {
+        maven { url "https://jitpack.io" }
+        google()
+        mavenCentral()
+    }
+}
+
+ext {
+    // Sdk and tools
+    minSdkVersion = 21
+    targetSdkVersion = 30
+    compileSdkVersion = 31
+
+    // App dependencies
+    androidxCoreKtxVersion = "1.7.0"
+    appCompatVersion = "1.3.1"
+    materialVersion = "1.4.0"
+    constraintlayoutVersion = "2.1.1"
+    rxJavaVersion = "2.2.21"
+    rxAndroidVersion = "2.1.1"
+    retrofitVersion = "2.9.0"
+    glideVersion = "4.12.0"
+    roomVersion = "2.3.0"
+    daggerVersion = "2.40.3"
+    elmslieVersion = "1.2.0"
+    shimmerVersion = "0.5.0"
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
